# liftr

./: .gitignore  LICENSE  README.md  compare_fsd.py  main.py  pyproject.toml  test_ejvp.py
conf/: config.yaml
conf/dataset/: arithmetic.yaml
conf/fsd_estimator/: ewc.yaml  ground_truth.yaml  liftr.yaml  ntk.yaml  random_subset.yaml
conf/model/: transformer.yaml
outputs/2026-03-15/00-12-01/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-15/00-25-27/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/: utils.py
src/datasets/: arithmetic.py
src/fsd_estimators/: base.py  ewc.py  ground_truth.py  liftr.py  ntk.py  random_subset.py
src/liftr_modes/: __init__.py  add.py  causal_mask.py  dropout.py  ejvp_fns.py  embedding.py  layer_norm.py  linear.py  qk_dot.py  relu.py  softmax.py  weighted_values.py
src/models/: transformer.py
src/moments_fsd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
